--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "peerDependencies": {
     "react": ">=16"
@@ -50,20 +50,29 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
     "@size-limit/preset-small-lib": "^8.2.4",
     "@storybook/addon-essentials": "^7.0.20",
     "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-interactions": "7.0.20",
     "@storybook/addon-links": "^7.0.20",
     "@storybook/addons": "^7.0.20",
+    "@storybook/blocks": "7.0.20",
     "@storybook/react": "^7.0.20",
+    "@storybook/react-webpack5": "7.0.20",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.2.4",
     "babel-loader": "^9.1.2",
     "husky": "^8.0.3",
+    "prop-types": "15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "size-limit": "^8.2.4",
+    "storybook": "7.0.20",
     "tsdx": "^0.14.1",
     "tslib": "^2.5.3",
     "typescript": "^5.1.3"
